--- a/restaurant_website/assets/scss/header.scss
+++ b/restaurant_website/assets/scss/header.scss
@@ -2,6 +2,7 @@
 
 body {
   background: url('../images/background.png');
+  background-attachment: fixed;
   color: #fff;
   background-color: #111;
   font-family: $font;
@@ -35,14 +36,16 @@ body {
    }
 }
 header {
+  z-index: 10;
+  position: absolute;
+  width: 100%;
   nav {
-    position: fixed;
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 20px 2% 0;
-    background: linear-gradient(#000, rgba(0,0,0,0));
+    background: linear-gradient(#000, rgba(0,0,0,.1));
      .logo {
        img {
          width: 310px;
@@ -227,6 +230,13 @@ header {
       }
   }//nav/>
 }//header/>
+.headerOnScroll {
+  position: fixed;
+  top: 0;
+  background: rgba(0,0,0,.7);
+  padding-bottom: 10px;
+  transition: .7s background;
+}
 
 
 
