--- a/restaurant_website/public/assets/css/header.css
+++ b/restaurant_website/public/assets/css/header.css
@@ -1,5 +1,6 @@
 body {
   background: url("../images/background.png");
+  background-attachment: fixed;
   color: #fff;
   background-color: #111;
   font-family: "Catamaran", sans-serif; }
@@ -29,193 +30,204 @@ body {
     .header-notification i:hover {
       color: #917952; }
 
-header nav {
-  position: fixed;
-  width: 100%;
-  display: -webkit-box;
-  display: flex;
-  flex-wrap: wrap;
-  -webkit-box-pack: justify;
-  justify-content: space-between;
-  padding: 20px 2% 0;
-  background: -webkit-gradient(linear, left top, left bottom, from(#000), to(rgba(0, 0, 0, 0)));
-  background: linear-gradient(#000, rgba(0, 0, 0, 0)); }
-  header nav .logo img {
-    width: 310px; }
-  header nav .header-menu .main-ul {
+header {
+  z-index: 10;
+  position: absolute;
+  width: 100%; }
+  header nav {
+    width: 100%;
     display: -webkit-box;
     display: flex;
-    text-transform: uppercase;
-    font-size: .92em;
-    margin-top: 10px; }
-    header nav .header-menu .main-ul li {
-      margin: 0 .7em;
-      position: relative;
-      cursor: pointer;
-      -webkit-transition: .4s color;
-      transition: .4s color;
-      z-index: 5; }
-      header nav .header-menu .main-ul li:hover {
-        color: #917952; }
-      header nav .header-menu .main-ul li a:hover {
-        color: #917952; }
-      header nav .header-menu .main-ul li a {
-        color: #fff;
-        -webkit-transition: .4s color;
-        transition: .4s color; }
-      header nav .header-menu .main-ul li .reservation-button {
-        padding: 6px 14px;
-        border: 2px solid #917952;
-        font-size: 15px;
-        text-transform: uppercase;
-        -webkit-transition: .5s border;
-        transition: .5s border; }
-        header nav .header-menu .main-ul li .reservation-button:hover {
-          outline: 2px solid #fff;
-          border: 2px solid transparent;
-          outline-offset: .5px; }
-      header nav .header-menu .main-ul li i {
-        margin-left: 5px;
-        -webkit-transition: .3s transform;
-        transition: .3s transform; }
-    header nav .header-menu .main-ul .sub-ul {
-      display: none;
-      padding-left: 5px;
-      padding-top: 7px;
-      padding-bottom: 7px;
-      background: #111;
-      width: 140px;
-      font-size: .8em;
-      position: absolute; }
-      header nav .header-menu .main-ul .sub-ul li {
-        margin: 8px 0;
-        padding-left: 8px;
-        font-weight: 600; }
-      header nav .header-menu .main-ul .sub-ul a {
-        display: block; }
-  header nav .menu-icon {
-    display: none; }
-  header nav .header-menu2 {
-    width: 100vw;
-    height: 100%;
-    background: #111111;
-    position: fixed;
-    z-index: 2;
-    top: -100%;
-    -webkit-transition: .4s top ease-in;
-    transition: .4s top ease-in;
-    left: 0;
-    display: none; }
-    header nav .header-menu2 .wrapper {
-      overflow-y: scroll;
-      height: 600px; }
-    header nav .header-menu2 .main-ul {
+    flex-wrap: wrap;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    padding: 20px 2% 0;
+    background: -webkit-gradient(linear, left top, left bottom, from(#000), to(rgba(0, 0, 0, 0.1)));
+    background: linear-gradient(#000, rgba(0, 0, 0, 0.1)); }
+    header nav .logo img {
+      width: 310px; }
+    header nav .header-menu .main-ul {
       display: -webkit-box;
       display: flex;
-      flex-wrap: wrap;
-      margin-top: 65px; }
-      header nav .header-menu2 .main-ul li {
-        width: 100%;
-        text-align: center;
-        font-size: 1.5em;
-        letter-spacing: 3.5px;
-        margin: 9px 0; }
-      header nav .header-menu2 .main-ul .sub-ul {
+      text-transform: uppercase;
+      font-size: .92em;
+      margin-top: 10px; }
+      header nav .header-menu .main-ul li {
+        margin: 0 .7em;
         position: relative;
-        text-align: center;
-        width: 100%;
-        height: 100%; }
-        header nav .header-menu2 .main-ul .sub-ul li {
-          font-size: .9em; }
-    header nav .header-menu2 .social-net-ul {
-      display: -webkit-box;
-      display: flex;
-      -webkit-box-pack: center;
-      justify-content: center;
-      padding: 20px;
-      border-top: 2px solid #966;
-      width: 90%;
-      margin-left: auto;
-      margin-right: auto;
-      margin-top: 30px; }
-      header nav .header-menu2 .social-net-ul a {
-        height: 26px;
-        width: 26px;
+        cursor: pointer;
+        -webkit-transition: .4s color;
+        transition: .4s color;
+        z-index: 5; }
+        header nav .header-menu .main-ul li:hover {
+          color: #917952; }
+        header nav .header-menu .main-ul li a:hover {
+          color: #917952; }
+        header nav .header-menu .main-ul li a {
+          color: #fff;
+          -webkit-transition: .4s color;
+          transition: .4s color; }
+        header nav .header-menu .main-ul li .reservation-button {
+          padding: 6px 14px;
+          border: 2px solid #917952;
+          font-size: 15px;
+          text-transform: uppercase;
+          -webkit-transition: .5s border;
+          transition: .5s border; }
+          header nav .header-menu .main-ul li .reservation-button:hover {
+            outline: 2px solid #fff;
+            border: 2px solid transparent;
+            outline-offset: .5px; }
+        header nav .header-menu .main-ul li i {
+          margin-left: 5px;
+          -webkit-transition: .3s transform;
+          transition: .3s transform; }
+      header nav .header-menu .main-ul .sub-ul {
+        display: none;
+        padding-left: 5px;
+        padding-top: 7px;
+        padding-bottom: 7px;
+        background: #111;
+        width: 140px;
+        font-size: .8em;
+        position: absolute; }
+        header nav .header-menu .main-ul .sub-ul li {
+          margin: 8px 0;
+          padding-left: 8px;
+          font-weight: 600; }
+        header nav .header-menu .main-ul .sub-ul a {
+          display: block; }
+    header nav .menu-icon {
+      display: none; }
+    header nav .header-menu2 {
+      width: 100vw;
+      height: 100%;
+      background: #111111;
+      position: fixed;
+      z-index: 2;
+      top: -100%;
+      -webkit-transition: .4s top ease-in;
+      transition: .4s top ease-in;
+      left: 0;
+      display: none; }
+      header nav .header-menu2 .wrapper {
+        overflow-y: scroll;
+        height: 600px; }
+      header nav .header-menu2 .main-ul {
+        display: -webkit-box;
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: 65px; }
+        header nav .header-menu2 .main-ul li {
+          width: 100%;
+          text-align: center;
+          font-size: 1.5em;
+          letter-spacing: 3.5px;
+          margin: 9px 0; }
+        header nav .header-menu2 .main-ul .sub-ul {
+          position: relative;
+          text-align: center;
+          width: 100%;
+          height: 100%; }
+          header nav .header-menu2 .main-ul .sub-ul li {
+            font-size: .9em; }
+      header nav .header-menu2 .social-net-ul {
         display: -webkit-box;
         display: flex;
         -webkit-box-pack: center;
         justify-content: center;
-        -webkit-box-align: center;
-        align-items: center;
-        background: #fff;
-        border-radius: 50%;
-        margin-left: 5px;
-        margin-right: 5px;
-        -webkit-transition: .8s background;
-        transition: .8s background; }
-        header nav .header-menu2 .social-net-ul a:hover, header nav .header-menu2 .social-net-ul a:active {
-          background: #917952; }
-        header nav .header-menu2 .social-net-ul a i {
-          color: #111;
-          font-size: 16.5px;
-          text-align: center;
-          letter-spacing: 0; }
-    header nav .header-menu2 .website-author {
-      padding: 20px;
-      text-align: center;
-      color: #fff;
-      background: #000;
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      text-transform: uppercase; }
-  header nav .menu-icon {
-    position: fixed;
-    top: 55px;
-    right: 12px;
-    z-index: 10;
-    -webkit-transition: .5s background;
-    transition: .5s background;
-    cursor: pointer; }
-    header nav .menu-icon:hover div {
-      background: #917952; }
-    header nav .menu-icon div {
-      width: 24.5px;
-      border-radius: .7px;
-      height: 3.5px;
-      margin: 5px 0;
-      background: #966;
-      box-shadow: 0 0 10px 1px #000;
-      -webkit-transform-origin: 0% 50%;
-      transform-origin: 0% 50%;
-      -webkit-transition: -webkit-transform .15s;
-      transition: -webkit-transform .15s;
-      transition: transform .15s;
-      transition: transform .15s, -webkit-transform .15s;
-      opacity: 1; }
-    header nav .menu-icon .mid {
-      -webkit-transform-origin: 40% 139%;
-      transform-origin: 40% 139%;
-      -webkit-transition: opacity .1s, -webkit-transform .1s;
-      transition: opacity .1s, -webkit-transform .1s;
-      transition: transform .1s, opacity .1s;
-      transition: transform .1s, opacity .1s, -webkit-transform .1s; }
-    header nav .menu-icon .activeTop {
-      -webkit-transform: rotate(43deg);
-      transform: rotate(43deg);
-      box-shadow: 0 0 0; }
-    header nav .menu-icon .activeMid {
-      -webkit-transform: rotate(-43deg);
-      transform: rotate(-43deg);
-      box-shadow: 0 0 0;
-      opacity: 0; }
-    header nav .menu-icon .activeBot {
-      -webkit-transform: rotate(-43deg);
-      transform: rotate(-43deg);
-      box-shadow: 0 0 0; }
-  header nav .activeSdMenu {
-    top: 0; }
+        padding: 20px;
+        border-top: 2px solid #966;
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 30px; }
+        header nav .header-menu2 .social-net-ul a {
+          height: 26px;
+          width: 26px;
+          display: -webkit-box;
+          display: flex;
+          -webkit-box-pack: center;
+          justify-content: center;
+          -webkit-box-align: center;
+          align-items: center;
+          background: #fff;
+          border-radius: 50%;
+          margin-left: 5px;
+          margin-right: 5px;
+          -webkit-transition: .8s background;
+          transition: .8s background; }
+          header nav .header-menu2 .social-net-ul a:hover, header nav .header-menu2 .social-net-ul a:active {
+            background: #917952; }
+          header nav .header-menu2 .social-net-ul a i {
+            color: #111;
+            font-size: 16.5px;
+            text-align: center;
+            letter-spacing: 0; }
+      header nav .header-menu2 .website-author {
+        padding: 20px;
+        text-align: center;
+        color: #fff;
+        background: #000;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        text-transform: uppercase; }
+    header nav .menu-icon {
+      position: fixed;
+      top: 55px;
+      right: 12px;
+      z-index: 10;
+      -webkit-transition: .5s background;
+      transition: .5s background;
+      cursor: pointer; }
+      header nav .menu-icon:hover div {
+        background: #917952; }
+      header nav .menu-icon div {
+        width: 24.5px;
+        border-radius: .7px;
+        height: 3.5px;
+        margin: 5px 0;
+        background: #966;
+        box-shadow: 0 0 10px 1px #000;
+        -webkit-transform-origin: 0% 50%;
+        transform-origin: 0% 50%;
+        -webkit-transition: -webkit-transform .15s;
+        transition: -webkit-transform .15s;
+        transition: transform .15s;
+        transition: transform .15s, -webkit-transform .15s;
+        opacity: 1; }
+      header nav .menu-icon .mid {
+        -webkit-transform-origin: 40% 139%;
+        transform-origin: 40% 139%;
+        -webkit-transition: opacity .1s, -webkit-transform .1s;
+        transition: opacity .1s, -webkit-transform .1s;
+        transition: transform .1s, opacity .1s;
+        transition: transform .1s, opacity .1s, -webkit-transform .1s; }
+      header nav .menu-icon .activeTop {
+        -webkit-transform: rotate(43deg);
+        transform: rotate(43deg);
+        box-shadow: 0 0 0; }
+      header nav .menu-icon .activeMid {
+        -webkit-transform: rotate(-43deg);
+        transform: rotate(-43deg);
+        box-shadow: 0 0 0;
+        opacity: 0; }
+      header nav .menu-icon .activeBot {
+        -webkit-transform: rotate(-43deg);
+        transform: rotate(-43deg);
+        box-shadow: 0 0 0; }
+    header nav .activeSdMenu {
+      top: 0; }
+
+.headerOnScroll {
+  position: fixed;
+  top: 0;
+  background: rgba(0, 0, 0, 0.7);
+  padding-bottom: 10px;
+  -webkit-transition: .7s background;
+  transition: .7s background; }
 
 @media only screen and (max-width: 769px) {
   header nav .logo img {
