I added new variable to this file.

--- a/restaurant_website/assets/scss/_variables.scss
+++ b/restaurant_website/assets/scss/_variables.scss
@@ -2,7 +2,8 @@ $font: 'Catamaran', sans-serif;
 $buttonBorder: rgb(145, 121, 82);
 $bigText: uppercase;
 $hoverColor: rgb(145, 121, 82);
-
+$gold: rgb(145, 121, 82);
+$platinum: #908a81;
 @mixin goldButton {
   padding: 6px 14px;
   border: 2px solid $buttonBorder;
