--- a/restaurant_website/public/assets/css/header.css
+++ b/restaurant_website/public/assets/css/header.css
@@ -43,7 +43,8 @@ header {
     justify-content: space-between;
     padding: 20px 2% 0;
     background: -webkit-gradient(linear, left top, left bottom, from(#000), to(rgba(0, 0, 0, 0.1)));
-    background: linear-gradient(#000, rgba(0, 0, 0, 0.1)); }
+    background: linear-gradient(#000, rgba(0, 0, 0, 0.1));
+    position: absolute; }
     header nav .logo img {
       width: 310px; }
     header nav .header-menu .main-ul {
@@ -98,7 +99,9 @@ header {
         header nav .header-menu .main-ul .sub-ul a {
           display: block; }
     header nav .menu-icon {
-      display: none; }
+      display: none;
+      -webkit-transition: top .6s;
+      transition: top .6s; }
     header nav .header-menu2 {
       width: 100vw;
       height: 100%;
@@ -175,8 +178,8 @@ header {
         width: 100%;
         text-transform: uppercase; }
     header nav .menu-icon {
-      position: fixed;
-      top: 55px;
+      position: relative;
+      bottom: 2px;
       right: 12px;
       z-index: 10;
       -webkit-transition: .5s background;
@@ -219,7 +222,8 @@ header {
         transform: rotate(-43deg);
         box-shadow: 0 0 0; }
     header nav .activeSdMenu {
-      top: 0; }
+      top: 0;
+      position: fixed; }
 
 .headerOnScroll {
   position: fixed;
