Public header.css done. Menu needs style for menu data.

--- a/restaurant_website/assets/scss/page/menu.scss
+++ b/restaurant_website/assets/scss/page/menu.scss
@@ -266,14 +266,37 @@ body {
 
 //menu-info - Begin
 .menu-info {
-  text-align: center;
-  h1 {
+  * {
+    text-align: center;
   }
-  div {
-    h3 {
-      p {
+  .content-div {
+    width: 100%;
+      h1 {
+        width: 60%;
+        margin: 50px 0 8px;
       }
-    }
+      h1:nth-of-type(even), div:nth-of-type(even){
+        float: right;
+      }
+      div {
+        width: 60%;
+        display: block;
+        h3 {
+          width: 100%;
+          p {
+            width: 100%;
+          }
+        }
+      }
+       &::after {
+         display: block;
+         clear: both;
+         content: '';
+       }
   }
+
+  h4 {
+  }
+
 }
 //menu-info - End
