--- a/restaurant_website/public/assets/css/header.css
+++ b/restaurant_website/public/assets/css/header.css
@@ -41,7 +41,7 @@ header {
     flex-wrap: wrap;
     -webkit-box-pack: justify;
     justify-content: space-between;
-    padding: 20px 2% 0;
+    padding: 20px 2% 15px;
     background: -webkit-gradient(linear, left top, left bottom, from(#000), to(rgba(0, 0, 0, 0.1)));
     background: linear-gradient(#000, rgba(0, 0, 0, 0.1));
     position: absolute; }
