--- a/restaurant_website/assets/scss/_variables.scss
+++ b/restaurant_website/assets/scss/_variables.scss
@@ -4,6 +4,7 @@ $bigText: uppercase;
 $hoverColor: rgb(145, 121, 82);
 $gold: rgb(145, 121, 82);
 $platinum: #908a81;
+$pink: #966;
 @mixin goldButton {
   padding: 6px 14px;
   border: 2px solid $buttonBorder;
