--- a/restaurant_website/assets/scss/page/events/ourEvents.scss
+++ b/restaurant_website/assets/scss/page/events/ourEvents.scss
@@ -107,6 +107,7 @@ body {
   height: 100%;
   background: #040404;
   padding: 5px;
+  position: relative;
    .search-div {
      float: left;
      div {
@@ -241,6 +242,7 @@ body {
      display: flex;
      justify-content: flex-start;
      font-size: .9em;
+     margin-bottom:15px;
         li {
           width: 14.28%;
           text-align: left;
@@ -251,21 +253,25 @@ body {
      width: 100%;
      display: flex;
      flex-wrap: wrap;
-     // border:0.5px solid #1d1717;
-     // border-right: 0;
-      div {
+     border-right:.5px solid #1d1717;
+     border-bottom:.5px solid #1d1717;
+     transition: .4s opacity;
+     position: relative;
+      .coverDiv {
         width: 14.28%;
         height: 150px;
-        background: #1d1717;
+        // background: #1d1717;
         display: flex;
         justify-content: center;
         align-items: center;
           .dayDiv {
             background: #040404;
-            width: 99.3%;
-            height: 99.1%;
+            width: 100%;
+            height: 100%;
             color: rgb(253, 102, 102);
             display: block;
+            border-left:.5px solid #1d1717;
+            border-top:.5px solid #1d1717;
             span {
               display: block;
               text-align: right;
@@ -285,6 +291,7 @@ body {
               }
               p:first-of-type {
                 margin-top: 40px;
+                cursor: default;
               }
               p:last-of-type {
                 font-weight: bold;
@@ -295,7 +302,64 @@ body {
                   }
               }
           }
-      }
-   }
+      }//coverDiv
+   }//calendar - End
+    .border-hack {
+      height: 150px;
+      min-width: auto;
+      max-width: 100%;
+      border-left:.5px solid #1d1717;
+      border-top:.5px solid #1d1717;
+    }
+    .gif {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform:translate(-50%,-50%);
+      opacity: 0;
+      display: none;
+      animation-play-state: paused;
+      animation: gif 4s 1;
+      z-index: 99;
+      width: 3%;
+      height: 5%;
+      transition: .6s opacity;
+      transform:scale(1);
+      animation-fill-mode: forwards;
+      transform-origin: center;
+        img {
+          width: 100%;
+          height: 100%;
+        }
+    }
+    @keyframes gif {
+      0% {opacity: 0;}
+      30% {opacity: 1;transform:scale(1.3)}
+      55% {opacity: .3;transform:scale(1)}
+      75% {opacity: 1;transform:scale(1.3)}
+      95% {opacity: .7;transform:scale(1)}
+      100% {opacity: 0;transform:scale(1); display: none;}
+    }
+    .details-div {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform:translate(-50%,-50%);
+      width: 90%;
+      height: 300px;
+      border:1px solid red;
+      display: none;
+      opacity: 0;
+      transition: .5s opacity;
+      animation-play-state: paused;
+      animation: details .3s 1;
+      animation-play-state: paused;
+      animation-delay:5s;
+      animation-fill-mode: forwards;
+    }
+    @keyframes details {
+      0% {opacity: 0;}
+      100% {opacity: 1;}
+    }
 }
 //events - End
