--- a/restaurant_website/public/page/assets/css/events/ourEvents.css
+++ b/restaurant_website/public/page/assets/css/events/ourEvents.css
@@ -107,7 +107,8 @@ body {
   width: 100%;
   height: 100%;
   background: #040404;
-  padding: 5px; }
+  padding: 5px;
+  position: relative; }
   .events .search-div {
     float: left; }
     .events .search-div div {
@@ -229,7 +230,8 @@ body {
     display: flex;
     -webkit-box-pack: start;
     justify-content: flex-start;
-    font-size: .9em; }
+    font-size: .9em;
+    margin-bottom: 15px; }
     .events .daysInWeek li {
       width: 14.28%;
       text-align: left;
@@ -238,29 +240,35 @@ body {
     width: 100%;
     display: -webkit-box;
     display: flex;
-    flex-wrap: wrap; }
-    .events .calendar div {
+    flex-wrap: wrap;
+    border-right: .5px solid #1d1717;
+    border-bottom: .5px solid #1d1717;
+    -webkit-transition: .4s opacity;
+    transition: .4s opacity;
+    position: relative; }
+    .events .calendar .coverDiv {
       width: 14.28%;
       height: 150px;
-      background: #1d1717;
       display: -webkit-box;
       display: flex;
       -webkit-box-pack: center;
       justify-content: center;
       -webkit-box-align: center;
       align-items: center; }
-      .events .calendar div .dayDiv {
+      .events .calendar .coverDiv .dayDiv {
         background: #040404;
-        width: 99.3%;
-        height: 99.1%;
+        width: 100%;
+        height: 100%;
         color: #fd6666;
-        display: block; }
-        .events .calendar div .dayDiv span {
+        display: block;
+        border-left: .5px solid #1d1717;
+        border-top: .5px solid #1d1717; }
+        .events .calendar .coverDiv .dayDiv span {
           display: block;
           text-align: right;
           padding: 2px 8px;
           color: #fffdfb; }
-        .events .calendar div .dayDiv p {
+        .events .calendar .coverDiv .dayDiv p {
           width: 100%;
           display: block;
           background: #fffdfb;
@@ -270,12 +278,152 @@ body {
           padding: 1px 5px;
           letter-spacing: .5px;
           cursor: pointer; }
-        .events .calendar div .dayDiv p:first-of-type {
-          margin-top: 40px; }
-        .events .calendar div .dayDiv p:last-of-type {
+        .events .calendar .coverDiv .dayDiv p:first-of-type {
+          margin-top: 40px;
+          cursor: default; }
+        .events .calendar .coverDiv .dayDiv p:last-of-type {
           font-weight: bold;
           border-bottom: 3.5px solid transparent;
           -webkit-transition: .5s border-bottom;
           transition: .5s border-bottom; }
-          .events .calendar div .dayDiv p:last-of-type:hover {
+          .events .calendar .coverDiv .dayDiv p:last-of-type:hover {
             border-bottom: 3.5px solid #fd6666; }
+  .events .border-hack {
+    height: 150px;
+    min-width: auto;
+    max-width: 100%;
+    border-left: .5px solid #1d1717;
+    border-top: .5px solid #1d1717; }
+  .events .gif {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    display: none;
+    -webkit-animation-play-state: paused;
+    animation-play-state: paused;
+    -webkit-animation: gif 4s 2;
+    animation: gif 4s 2;
+    z-index: 99;
+    width: 60px;
+    height: 60px;
+    -webkit-transition: .6s opacity;
+    transition: .6s opacity;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+    -webkit-transform-origin: center;
+    transform-origin: center; }
+    .events .gif img {
+      width: 100%;
+      height: 100%; }
+
+@-webkit-keyframes gif {
+  0% {
+    opacity: 0; }
+  30% {
+    opacity: 1;
+    -webkit-transform: scale(1.3);
+    transform: scale(1.3); }
+  55% {
+    opacity: .3;
+    -webkit-transform: scale(1);
+    transform: scale(1); }
+  75% {
+    opacity: 1;
+    -webkit-transform: scale(1.3);
+    transform: scale(1.3); }
+  95% {
+    opacity: .7;
+    -webkit-transform: scale(1);
+    transform: scale(1); }
+  100% {
+    opacity: 0;
+    -webkit-transform: scale(1);
+    transform: scale(1); } }
+
+@keyframes gif {
+  0% {
+    opacity: 0; }
+  30% {
+    opacity: 1;
+    -webkit-transform: scale(1.3);
+    transform: scale(1.3); }
+  55% {
+    opacity: .3;
+    -webkit-transform: scale(1);
+    transform: scale(1); }
+  75% {
+    opacity: 1;
+    -webkit-transform: scale(1.3);
+    transform: scale(1.3); }
+  95% {
+    opacity: .7;
+    -webkit-transform: scale(1);
+    transform: scale(1); }
+  100% {
+    opacity: 0;
+    -webkit-transform: scale(1);
+    transform: scale(1); } }
+  .events .details-div {
+    margin-top: 20px;
+    width: 98%;
+    margin-left: auto;
+    margin-right: auto;
+    display: none;
+    opacity: 0;
+    -webkit-transition: .5s opacity;
+    transition: .5s opacity;
+    -webkit-animation-play-state: paused;
+    animation-play-state: paused;
+    -webkit-animation: details .3s 1;
+    animation: details .3s 1;
+    animation-play-state: paused;
+    -webkit-animation-delay: 5s;
+    animation-delay: 5s;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards; }
+    .events .details-div ul {
+      margin-bottom: 15px;
+      display: -webkit-box;
+      display: flex;
+      -webkit-box-align: center;
+      align-items: center;
+      width: 35%; }
+      .events .details-div ul li:nth-of-type(2) {
+        margin-left: 30px; }
+      .events .details-div ul li {
+        font-size: 0.95em;
+        margin: 0 9px;
+        cursor: pointer; }
+        .events .details-div ul li i {
+          font-size: 1.2em; }
+    .events .details-div h2 {
+      font-size: 2.2em;
+      font-weight: lighter; }
+    .events .details-div p {
+      padding-left: 5px; }
+    .events .details-div img {
+      display: block;
+      margin-top: 15px;
+      width: 250px;
+      height: 370px;
+      margin-bottom: 15px; }
+
+@-webkit-keyframes details {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+
+@keyframes details {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+  .events .hs {
+    opacity: 0;
+    display: none; }
