--- a/restaurant_website/public/page/assets/css/events/ourEvents.css
+++ b/restaurant_website/public/page/assets/css/events/ourEvents.css
@@ -123,63 +123,10 @@ body {
         padding-left: 8px; }
     .events .search-div div:first-of-type {
       float: left; }
-      .events .search-div div:first-of-type i {
-        position: absolute;
-        z-index: 2;
-        right: 0;
-        font-size: 20px;
-        width: 30px;
-        background: black;
-        display: block;
-        top: 0;
-        height: 100%;
-        border: 1px solid #fff;
-        border-top-right-radius: 4px;
-        border-bottom-right-radius: 4px;
-        display: -webkit-box;
-        display: flex;
-        -webkit-box-pack: center;
-        justify-content: center;
-        -webkit-box-align: center;
-        align-items: center;
-        cursor: pointer;
-        -webkit-transition: .4s color;
-        transition: .4s color; }
-      .events .search-div div:first-of-type i:hover {
-        color: #917952; }
     .events .search-div div:nth-of-type(2) {
       margin: 15px 2px;
       position: relative;
       float: left; }
-      .events .search-div div:nth-of-type(2) i {
-        font-size: 20px;
-        width: 30px;
-        background: black;
-        display: block;
-        top: 0;
-        height: 100%;
-        border: 1px solid #fff;
-        border-top-left-radius: 4px;
-        border-bottom-left-radius: 4px;
-        display: -webkit-box;
-        display: flex;
-        -webkit-box-pack: center;
-        justify-content: center;
-        -webkit-box-align: center;
-        align-items: center;
-        color: #fff;
-        float: left;
-        margin: 0 2px;
-        cursor: pointer;
-        -webkit-transition: .4s color;
-        transition: .4s color; }
-      .events .search-div div:nth-of-type(2) i:hover {
-        color: #917952; }
-      .events .search-div div:nth-of-type(2) i:nth-of-type(2) {
-        height: 100%;
-        border-radius: 0;
-        border-top-right-radius: 4px;
-        border-bottom-right-radius: 4px; }
       .events .search-div div:nth-of-type(2) input[type="date"] {
         height: 100%;
         width: 150px;
@@ -223,6 +170,40 @@ body {
     display: block;
     clear: both;
     content: ''; }
+  .events .showMonth {
+    position: relative;
+    display: -webkit-box;
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    margin-bottom: 15px; }
+    .events .showMonth i {
+      margin: 0 10px;
+      z-index: 2;
+      font-size: 20px;
+      width: 30px;
+      background: black;
+      display: block;
+      height: 100%;
+      border: 1px solid #fff;
+      border-top-right-radius: 4px;
+      border-bottom-right-radius: 4px;
+      display: -webkit-box;
+      display: flex;
+      -webkit-box-pack: center;
+      justify-content: center;
+      -webkit-box-align: center;
+      align-items: center;
+      cursor: pointer;
+      -webkit-transition: .4s color;
+      transition: .4s color; }
+    .events .showMonth i:nth-of-type(1) {
+      height: 100%;
+      border-radius: 0;
+      border-top-left-radius: 4px;
+      border-bottom-left-radius: 4px; }
+    .events .showMonth i:hover {
+      color: #917952; }
   .events .day-month {
     color: #ccc; }
   .events .daysInWeek {
@@ -241,14 +222,13 @@ body {
     display: -webkit-box;
     display: flex;
     flex-wrap: wrap;
-    border-right: .5px solid #1d1717;
-    border-bottom: .5px solid #1d1717;
     -webkit-transition: .4s opacity;
     transition: .4s opacity;
     position: relative; }
     .events .calendar .coverDiv {
-      width: 14.28%;
+      width: 14.18%;
       height: 150px;
+      margin: 0.05%;
       display: -webkit-box;
       display: flex;
       -webkit-box-pack: center;
@@ -261,8 +241,7 @@ body {
         height: 100%;
         color: #fd6666;
         display: block;
-        border-left: .5px solid #1d1717;
-        border-top: .5px solid #1d1717; }
+        border: .5px solid #1d1717; }
         .events .calendar .coverDiv .dayDiv span {
           display: block;
           text-align: right;
@@ -288,6 +267,10 @@ body {
           transition: .5s border-bottom; }
           .events .calendar .coverDiv .dayDiv p:last-of-type:hover {
             border-bottom: 3.5px solid #fd6666; }
+    .events .calendar .lastParEle {
+      width: 14.33%; }
+    .events .calendar .lastElement {
+      border-right: .5px solid #1d1717; }
   .events .border-hack {
     height: 150px;
     min-width: auto;
@@ -427,3 +410,36 @@ body {
   .events .hs {
     opacity: 0;
     display: none; }
+
+@media only screen and (max-width: 769px) {
+  .events .search-div {
+    display: none; }
+  .events .events-view {
+    width: 100%;
+    float: none;
+    margin: 15px 5px; }
+  .events .events-view div button {
+    padding: 6px 9px;
+    font-size: .8em; }
+  .events .showMonth {
+    font-size: 0.85em; }
+    .events .showMonth i {
+      font-size: 18px;
+      width: 25px; } }
+
+@media only screen and (max-width: 750px) {
+  .events {
+    overflow-x: scroll; }
+    .events .daysInWeek {
+      width: 800px; }
+      .events .daysInWeek li {
+        width: 170px;
+        padding-left: 3px; }
+    .events .calendar {
+      width: 800px;
+      padding: 1px 0 0; }
+    .events .calendar .coverDiv {
+      width: 111px;
+      margin: 1.5px; }
+    .events .calendar .lastParEle {
+      width: 111.9px; } }
