--- a/restaurant_website/public/page/assets/css/events/ourEvents.css
+++ b/restaurant_website/public/page/assets/css/events/ourEvents.css
@@ -513,12 +513,150 @@ body {
       font-weight: bolder; }
     .pinboard .coverDiv p:last-of-type {
       font-size: .95em;
-      padding: 7px 14px 35px; }
+      padding: 7px 14px; }
   .pinboard .pinColumn:first-of-type .coverDiv:nth-child(1) img {
-    height: 230px; }
-  .pinboard .coverDiv:nth-child(2n+2) img {
-    height: 200px; }
+    height: 260px; }
+  .pinboard .coverDiv:nth-child(2n+2) {
+    height: 320px; }
+    .pinboard .coverDiv:nth-child(2n+2) img {
+      height: 230px; }
   .pinboard .coverDiv:nth-child(3n+0) {
-    height: 340px; }
+    height: 430px; }
     .pinboard .coverDiv:nth-child(3n+0) img {
-      height: 250px; }
+      height: 290px; }
+
+@media only screen and (max-width: 1180px) {
+  .pinboard .pinColumn {
+    width: 18%; }
+  .pinboard .coverDiv {
+    width: 100%;
+    display: block; }
+    .pinboard .coverDiv img {
+      width: 100%; }
+    .pinboard .coverDiv p:first-of-type {
+      font-size: .95em; }
+    .pinboard .coverDiv p:last-of-type {
+      font-size: .8em; }
+  .pinboard .pinColumn:first-of-type .coverDiv:nth-child(1) img {
+    height: 210px; }
+  .pinboard .coverDiv:nth-child(2n+2) img {
+    height: 180px; }
+  .pinboard .coverDiv:nth-child(3n+0) {
+    height: 335px; }
+    .pinboard .coverDiv:nth-child(3n+0) img {
+      height: 210px; } }
+
+@media only screen and (max-width: 910px) {
+  .pinboard .pinColumn {
+    width: 100%;
+    display: -webkit-box;
+    display: flex;
+    justify-content: space-around; }
+  .pinboard .coverDiv {
+    width: 23.5%;
+    display: block; }
+    .pinboard .coverDiv img {
+      width: 100%; }
+    .pinboard .coverDiv p:first-of-type {
+      font-size: 1.1em; }
+    .pinboard .coverDiv p:last-of-type {
+      font-size: .9em; }
+  .pinboard .pinColumn:first-of-type .coverDiv:nth-child(1) img {
+    height: 40%; }
+  .pinboard .coverDiv:nth-child(2n+2) img {
+    height: 40%; }
+  .pinboard .coverDiv:nth-child(3n+0) img {
+    height: 40%; } }
+
+@media only screen and (max-width: 750px) {
+  .pinboard .pinColumn {
+    width: 100%;
+    display: -webkit-box;
+    display: flex;
+    justify-content: space-around; }
+  .pinboard .pinColumn:first-of-type .coverDiv:nth-child(1),
+  .pinboard .coverDiv:nth-child(2n+2),
+  .pinboard .coverDiv:nth-child(3n+0),
+  .pinboard .coverDiv {
+    height: 310px;
+    width: 23.5%;
+    display: block; }
+    .pinboard .pinColumn:first-of-type .coverDiv:nth-child(1) img,
+    .pinboard .coverDiv:nth-child(2n+2) img,
+    .pinboard .coverDiv:nth-child(3n+0) img,
+    .pinboard .coverDiv img {
+      width: 100%; }
+    .pinboard .pinColumn:first-of-type .coverDiv:nth-child(1) p:first-of-type,
+    .pinboard .coverDiv:nth-child(2n+2) p:first-of-type,
+    .pinboard .coverDiv:nth-child(3n+0) p:first-of-type,
+    .pinboard .coverDiv p:first-of-type {
+      font-size: 1em; }
+    .pinboard .pinColumn:first-of-type .coverDiv:nth-child(1) p:last-of-type,
+    .pinboard .coverDiv:nth-child(2n+2) p:last-of-type,
+    .pinboard .coverDiv:nth-child(3n+0) p:last-of-type,
+    .pinboard .coverDiv p:last-of-type {
+      font-size: .85em; } }
+
+@media only screen and (max-width: 542px) {
+  .pinboard .pinColumn {
+    width: 100%;
+    display: -webkit-box;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap; }
+  .pinboard .pinColumn:first-of-type .coverDiv:nth-child(1),
+  .pinboard .coverDiv:nth-child(2n+2),
+  .pinboard .coverDiv:nth-child(3n+0),
+  .pinboard .coverDiv {
+    height: 280px !important;
+    width: 43% !important;
+    display: block;
+    margin: 12px 0; }
+    .pinboard .pinColumn:first-of-type .coverDiv:nth-child(1) img,
+    .pinboard .coverDiv:nth-child(2n+2) img,
+    .pinboard .coverDiv:nth-child(3n+0) img,
+    .pinboard .coverDiv img {
+      width: 100%;
+      height: 140px !important; }
+    .pinboard .pinColumn:first-of-type .coverDiv:nth-child(1) p:first-of-type,
+    .pinboard .coverDiv:nth-child(2n+2) p:first-of-type,
+    .pinboard .coverDiv:nth-child(3n+0) p:first-of-type,
+    .pinboard .coverDiv p:first-of-type {
+      font-size: 1.1em; }
+    .pinboard .pinColumn:first-of-type .coverDiv:nth-child(1) p:last-of-type,
+    .pinboard .coverDiv:nth-child(2n+2) p:last-of-type,
+    .pinboard .coverDiv:nth-child(3n+0) p:last-of-type,
+    .pinboard .coverDiv p:last-of-type {
+      font-size: .9em; } }
+
+@media only screen and (max-width: 426px) {
+  .pinboard .pinColumn {
+    width: 100%;
+    display: -webkit-box;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap; }
+  .pinboard .pinColumn:first-of-type .coverDiv:nth-child(1),
+  .pinboard .coverDiv:nth-child(2n+2),
+  .pinboard .coverDiv:nth-child(3n+0),
+  .pinboard .coverDiv {
+    height: 280px !important;
+    width: 48% !important;
+    display: block;
+    margin: 4px 0; }
+    .pinboard .pinColumn:first-of-type .coverDiv:nth-child(1) img,
+    .pinboard .coverDiv:nth-child(2n+2) img,
+    .pinboard .coverDiv:nth-child(3n+0) img,
+    .pinboard .coverDiv img {
+      width: 100%;
+      height: 140px !important; }
+    .pinboard .pinColumn:first-of-type .coverDiv:nth-child(1) p:first-of-type,
+    .pinboard .coverDiv:nth-child(2n+2) p:first-of-type,
+    .pinboard .coverDiv:nth-child(3n+0) p:first-of-type,
+    .pinboard .coverDiv p:first-of-type {
+      font-size: 1em; }
+    .pinboard .pinColumn:first-of-type .coverDiv:nth-child(1) p:last-of-type,
+    .pinboard .coverDiv:nth-child(2n+2) p:last-of-type,
+    .pinboard .coverDiv:nth-child(3n+0) p:last-of-type,
+    .pinboard .coverDiv p:last-of-type {
+      font-size: .85em; } }
