--- a/restaurant_website/public/page/assets/css/events/ourEvents.css
+++ b/restaurant_website/public/page/assets/css/events/ourEvents.css
@@ -79,7 +79,8 @@ body {
       color: #fff; }
     .slide-show .arrow-container i {
       color: #fff;
-      cursor: pointer; }
+      cursor: pointer;
+      visibility: hidden; }
 
 @media only screen and (max-width: 921px) {
   .slide-show .slide .slideImgPlaceHolder {
